<resources>
    <string name="app_name">CHECK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuestras_expediciones">Nuestras expediciones</string>
    <string name="email">email</string>
    <string name="contrase_a">contraseña</string>
    <string name="entra">entra</string>
    <string name="cree_una_cuenta">Cree una cuenta</string>
    <string name="em">Email</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="crear_una_cuenta_nueva">Crear una cuenta nueva</string>
    <string name="a_ade_imagen">Añade imagen</string>
    <string name="name">Nombre</string>
    <string name="registrarte">Registrarte</string>
    <string name="confirma_contrase_a">Confirma contraseña</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="registrarme">Registrarme</string>
    <string name="registrate">Registrate</string>
    <string name="chat">Chat</string>
    <string name="nickname">nickname</string>
    <string name="en_busca_de_perezosos">En Busca de Perezosos</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="seleccionar_usuario">Seleccionar Usuario</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
</resources>